feat: radio classes

--- a/src/components/registerUser/registerForm.module.css
+++ b/src/components/registerUser/registerForm.module.css
@@ -85,3 +85,42 @@
 .button:hover {
     background-color: #d8b95c;
 }
+
+.customRadio {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #007bff; 
+    border-radius: 3px; 
+    background-color: #f9f9f9; 
+    cursor: pointer;
+    position: relative;
+    margin-right: 10px; 
+}
+
+input[type="radio"]:checked + .customRadio {
+    background-color: #007bff; 
+    border-color: #007bff; 
+}
+
+input[type="radio"]:checked + .customRadio::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 12px;
+    height: 12px;
+    background-color: #fff; 
+    border-radius: 50%; 
+}
+@media (max-width: 480px) {
+    .body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        margin: 0;
+        background-color: #f0f0f0;
+    }
+}
