feat: Implementar estilos do figma & Componente Radio

--- a/src/components/registerUser/registerForm.module.css
+++ b/src/components/registerUser/registerForm.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
 }
 
 .form {
@@ -12,7 +12,7 @@
     width: 100%;
     padding: 20px;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #2e1f2794;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     box-sizing: border-box; 
 }
@@ -20,13 +20,15 @@
 .title {
     color: #E9C568;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 50px !important; 
     text-align: center;
     margin: 0;
+    margin-bottom: 1em;
 }
 
 .description {
-    color: #333;
+    color: #0c0c0c;
+    font-weight: 600 !important;
     font-size: 16px;
     margin-bottom: 20px;
     text-align: center;
@@ -40,33 +42,35 @@
 
 .legend {
     font-size: 18px;
-    color: #E9C568;
+    color: #0c0c0c !important;
+    font-weight: 600 !important;
     margin-bottom: 10px;
     font-weight: bold;
     text-align: left; 
-}
-
-.input {
-    display: block;
-    width: 100%; 
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background-color: #B4D2E7;
-    font-size: 16px;
-    box-sizing: border-box; 
-}
-
-.radio {
-    margin-right: 5px;
 }
 
 .label {
     display: block;
     font-size: 16px;
     margin-bottom: 10px;
-    color: #333;
+    color: #E9C568;
+    font-weight: 650 !important;
+
+}
+
+.input {
+    display: block;
+    width: 100%; 
+    padding: 10px !important;
+    margin-bottom: 2em !important;
+    border: 1px solid #000000 !important;
+    background-color: #e0f1fd !important;
+    font-size: 16px;
+    box-sizing: border-box; 
+}
+
+.radio {
+    margin-right: 10px;
 }
 
 .button {
@@ -82,24 +86,28 @@
 }
 
 .button:hover {
-    background-color: #d8b95c;
+    background-color: #d8b95c !important;
+}
+
+button::after{
+    background-color: #333 !important;
 }
 
 .customRadio {
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #007bff; 
-    border-radius: 3px; 
+    width: 20px !important;
+    height: 20px !important;
+    border: 2px solid #007bff !important; 
+    border-radius: 3px !important; 
     background-color: #f9f9f9; 
     cursor: pointer;
     position: relative;
-    margin-right: 10px; 
+    margin-right: 0px;
 }
 
 input[type="radio"]:checked + .customRadio {
-    background-color: #007bff; 
-    border-color: #007bff; 
+    background-color: #d8b95c; 
+    border: 2px solid #d8b95c !important; 
 }
 
 input[type="radio"]:checked + .customRadio::after {
@@ -111,8 +119,9 @@ input[type="radio"]:checked + .customRadio::after {
     width: 12px;
     height: 12px;
     background-color: #fff; 
-    border-radius: 50%; 
+    border-radius: 50% !important; 
 }
+
 @media (max-width: 480px) {
     .body {
         display: flex;
@@ -121,5 +130,11 @@ input[type="radio"]:checked + .customRadio::after {
         height: 100%;
         margin: 0;
         background-color: #f0f0f0;
+    }
+    .form {
+        background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
+    }
+    .label {
+        color:#0c0c0c;
     }
 }
