--- a/src/components/registerUser/registerForm.module.css
+++ b/src/components/registerUser/registerForm.module.css
@@ -69,6 +69,13 @@
     box-sizing: border-box; 
 }
 
+.userType {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    
+}
+
 .radio {
     margin-right: 10px;
 }
@@ -82,7 +89,8 @@
     border-radius: 4px;
     cursor: pointer;
     width: 100%; 
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    margin-top: 2.5em;
 }
 
 .button:hover {
@@ -122,7 +130,7 @@ input[type="radio"]:checked + .customRadio::after {
     border-radius: 50% !important; 
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .body {
         display: flex;
         justify-content: center;
@@ -133,8 +141,11 @@ input[type="radio"]:checked + .customRadio::after {
     }
     .form {
         background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
+        background: #2e1f2733;
+
     }
     .label {
         color:#0c0c0c;
     }
+    
 }
