feat: Refatoração do Login

--- a/src/components/loginUser/loginForm.module.css
+++ b/src/components/loginUser/loginForm.module.css
@@ -4,29 +4,30 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
 }
 
 .form {
-    max-width: 500px;
+    max-width: 700px;
     width: 100%;
     padding: 20px;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #2e1f2794;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
+    box-sizing: border-box; 
 }
 
 .title {
-    color: #E9C568;
+    color: #E9C568 !important;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 50px !important; 
     text-align: center;
     margin: 0;
 }
 
 .description {
-    color: #333;
+    color: #0c0c0c;
+    font-weight: 600 !important;
     font-size: 16px;
     margin-bottom: 20px;
     text-align: center;
@@ -35,22 +36,20 @@
 .input {
     display: block;
     width: 100%; 
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background-color: #B4D2E7;
+    padding: 10px !important;
+    margin-bottom: 2em !important;
+    border: 1px solid #000000 !important;
+    background-color: #e0f1fd !important;
     font-size: 16px;
     box-sizing: border-box; 
 }
 
-.userType{
-    display: flex;
-    justify-content: center !important; 
-    align-items: center !important;     
-    gap: 20px;               
-    width: 100%;
-    padding: 200px;           
+.label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: #E9C568;
+    font-weight: 650 !important;
 }
 
 .button {
@@ -62,14 +61,16 @@
     border-radius: 4px;
     cursor: pointer;
     width: 100%; 
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    margin-top: 2.5em;
 }
 
 .button:hover {
-    background-color: #d8b95c;
+    background-color: #d8b95c !important;
 }
 
 @media (max-width: 480px) {
+
     .body {
         display: flex;
         justify-content: center;
@@ -77,5 +78,13 @@
         height: 100%;
         margin: 0;
         background-color: #f0f0f0;
+    }
+    .form {
+        background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
+        background: #2e1f2733;
+
+    }
+    .label {
+        color:#0c0c0c;
     }
 }
