--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,3 +1,10 @@
-.noflow {
+.wrapper {
+    flex-grow: 1;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     overflow-x: hidden;
 }
