--- a/src/components/LoginForm/loginForm.module.css
+++ b/src/components/LoginForm/loginForm.module.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     margin: 0;
-    background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
+    background: linear-gradient(0deg, var(--c-lightBlue) 0%, var(--c-blue) 100%);
+    padding: 14em 0;
 }
 
 .form {
@@ -48,12 +49,12 @@
     display: block;
     font-size: 16px;
     margin-bottom: 10px;
-    color: #E9C568;
+    color: var(--c-yellow);
     font-weight: 650 !important;
 }
 
 .button {
-    background-color: #E9C568;
+    background-color: var(--c-yellow);
     border: none;
     color: white;
     padding: 10px 20px;
