--- a/src/pages/AdminDashboard/adminDashboard.module.css
+++ b/src/pages/AdminDashboard/adminDashboard.module.css
@@ -28,6 +28,18 @@
     background-color: var(--c-orange);
 }
 
+.content button{
+    display: block !important;
+    margin-top: 1.5em !important;
+    border: 1px solid #000 !important;
+    background-color: var(--c-yellow) !important;
+    transition: 300ms;
+}
+
+.content button:hover{
+    background-color: var(--c-lightBlue) !important;
+}
+
 .content h3{
     font-size: 2em;
     margin-bottom: 1em;
