--- a/src/pages/AdminDashboard/adminDashboard.module.css
+++ b/src/pages/AdminDashboard/adminDashboard.module.css
@@ -23,6 +23,8 @@
     display: inline-block;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    padding-bottom: 0.5em;
+    padding-top: 0.5em;
     margin-right: 0.5em;
     margin-top: 0.5em;
     background-color: var(--c-orange);
@@ -47,6 +49,7 @@
 
 .content p {
     color: #fff;
+    font-weight: 600;
 }
 
 .content article{
