--- a/src/components/RegisterForm/registerForm.module.css
+++ b/src/components/RegisterForm/registerForm.module.css
@@ -121,6 +121,15 @@ button::after{
     margin-right: 0px;
 }
 
+.formQuestion {
+    margin-top: 8vw;
+    text-align: center;
+}
+
+.formLink {
+    color: var(--c-lightBlue);
+}
+
 input[type="radio"]:checked + .customRadio {
     background-color: var(--c-yellow); 
     border: 2px solid var(--c-yellow) !important; 
