--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -3,7 +3,7 @@
     color: var(--c-yellow);
     display: flex !important;
     flex-direction: column !important;
-    max-height: 15vh;
+    height: auto;
     width: 100% !important;
     margin-top: 0;
 }
@@ -23,7 +23,7 @@
 .footerBody img {
     width: 60px;
     height: 60px;
-    margin: 0 8px;
+    /* margin: 0 8px; */
 }
 
 @media (max-width: 768px) {
@@ -36,7 +36,7 @@
 
 @media (max-width: 576px) {
     .footerBody img {
-        margin-top: -10px;
+        /* margin-top: -10px; */
         width: 40px;
         height: 40px;
     }
@@ -44,13 +44,13 @@
 
 @media (max-width: 400px) {
     .footerBody img {
-        margin-top: -10px;
+        /* margin-top: -10px; */
         width: 30px;
         height: 30px;
     }
 
     .footerBody p, .footerBody a {
-        font-size: 0.9em;
+        font-size: 0.8em;
     }
 }
 
