--- a/src/components/LoginForm/loginForm.module.css
+++ b/src/components/LoginForm/loginForm.module.css
@@ -76,10 +76,10 @@
 
 .formLink {
     color: var(--c-lightBlue);
+    font-weight: 700;
 }
 
 @media (max-width: 480px) {
-
     .body {
         display: flex;
         justify-content: center;
@@ -87,13 +87,9 @@
         height: 100%;
         margin: 0;
         background-color: #f0f0f0;
+        padding-top: 0;
     }
     .form {
-        background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
-        background: #2e1f2733;
-
-    }
-    .label {
-        color:#0c0c0c;
+        border-radius: 0;
     }
 }
