--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -23,9 +23,9 @@
 }
 
 .title {
-    font-size: 3vw;
+    font-size: 3vw !important;
     font-family: "Keania One", sans-serif;
-    font-weight: 400;
+    font-weight: 100;
 }
 
 .headerDivider {
@@ -37,52 +37,45 @@
 }
 
 .slogan {
-    margin-top: 0.5vw;
-    font-size: 1.5vw;
-    align-self: center;
-}
-
-@media all and (max-width: 1450px) {
-    .headerDivider {
-        height: 2.5vh;
-    }
+    margin-top: 0.5vw !important;
+    font-size: 1.5vw !important;
+    align-self: center ;
 }
 
 @media all and (max-width: 1000px) {
     .headerBody {
         height: auto;
-        padding: 1vw 0;
-        justify-content: center;
+        padding: 1.5vw 0;
+        justify-content: left;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
+
     .textWrapper {
-        display: flex;
-        flex-direction: column;
         align-items: center;
     }
-    .headerDivider {
-        display: none;
+
+    .headerDivider{
+        margin-left: 3vw;
+        height: 6vw;
+        width: 0.2rem; 
     }
+
     .slogan {
-        margin-top: 0;
+        font-size: 3.5vw !important;
+        margin-left: -5.5vw;
+        padding-left: 1vw;
+        font-weight: 600;
+        text-align: center;
     }
 }
 
-@media all and (max-width: 650px) {
+@media all and (max-width: 600px) {
     .title {
-        font-size: 4vw !important;
+        font-size: 5.5vw !important;
     }
-    .slogan {
-        font-size: 3vw;
-    }
-}
-
-@media all and (max-width: 300px) {
-    .title {
-        font-size: 5vw !important;
-    }
-    .slogan {
-        font-size: 4vw;
+    .logo {
+        width: 15vw;
+        height: auto;
     }
 }
