--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -4,8 +4,9 @@
     display: flex !important;
     flex-direction: column !important;
     height: auto;
-    width: 100% !important;
-    margin-top: 0;
+    width: 100vw;
+    padding-bottom: 0 !important;
+    align-items: center;
 }
 
 .footerBody p{
@@ -23,34 +24,51 @@
 .footerBody img {
     width: 60px;
     height: 60px;
-    /* margin: 0 8px; */
 }
 
-@media (max-width: 768px) {
+.copyright {
+    font-size: 1vw;
+    margin-top: 0 !important;
+    border: 0 !important;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    color: #fff;
+}
+
+.footerLinks {
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+    border: 0 !important;
+}
+
+@media (max-width: 1000px) {
     .footerBody img {
         margin-top: -10px;
-        width: 50px;
-        height: 50px;
+        width: 10vw;
+        height: auto;
+    }
+
+    .footerLinks {
+        font-size: 3vw !important;
+        margin-bottom: 0 !important;
+        padding-bottom: 0 !important;
+    }
+    .footerBody p {
+        padding-top: 2vw !important;
+    }
+
+    .copyright {
+        font-size: 3vw !important;
+        padding-bottom: 0 !important;
+        margin-bottom: 0 !important;
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 600px) {
     .footerBody img {
-        /* margin-top: -10px; */
-        width: 40px;
-        height: 40px;
-    }
-}
-
-@media (max-width: 400px) {
-    .footerBody img {
-        /* margin-top: -10px; */
-        width: 30px;
-        height: 30px;
-    }
-
-    .footerBody p, .footerBody a {
-        font-size: 0.8em;
+        width: 8vw;
+        height: auto;
+        margin: 1vw 2vw !important;
     }
 }
 
