fix: display flex no footer

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -36,6 +36,7 @@
 }
 
 .footerLinks {
+    display: flex;
     margin-top: 0.7vw !important;
     margin-bottom: 0.7vw !important;
     color: #fff !important;
