--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -29,7 +29,7 @@
 }
 
 .headerDivider {
-    background-color: white;
+    background-color: #fff;
     width: 0.3rem;
     height: 2.7vw;
     margin: 0 1.5rem;
