--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -7,4 +7,7 @@
     flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    background: var(--c-blue);
 }
