--- a/src/pages/Subhome/subhome.module.css
+++ b/src/pages/Subhome/subhome.module.css
@@ -1,28 +1,37 @@
 .pageWrapper {
     width: 100%;
     height: 100vh;
-    background-color: #2e1f27;
+    background-color: var(--c-lightBlue);
 }
 
 .body {
-    width: 90%;
-    display: flex;
+    width: 100%;
     flex-direction: column;
     text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin: 2vw;
     gap: 3vh;
+}
+
+.info {
+    margin-top: 10vw;
+}
+
+.btnsWrapper {
+    margin-top: 3vw;
+    gap: 4vw;
+    justify-content: center;
+}
+
+.subhomeBtn {
+    background-color: var(--c-orange) !important;
+    color: white !important;
+    width: 10vw !important;
+    height: 3vw !important;
+    font-size: 2vw !important;
+    border-radius: 15px !important;
 }
 
 .infoText {
     font-size: 2vw;
-    color: white;
-}
-
-.signature {
-    display: flex;
-    color: white;
-    margin-left: 50vw;
-    font-size: 1.5vw;
+    font-weight: 700;
+    color: black;
 }
