--- a/src/components/MuralDrawer/muralDrawer.module.css
+++ b/src/components/MuralDrawer/muralDrawer.module.css
@@ -12,3 +12,21 @@
 .content {
     background-color: #B4D2E7;
 }
+
+.button{
+    background: #B4D2E7 !important;
+    height: 2em;
+    width: 2em;
+    transition: 300ms;
+}
+
+.button:hover{
+    background: #9abfda !important;
+    cursor: pointer;
+}
+
+.subjectName{
+    font-size: 1.35em;
+    text-align: center;
+    margin: auto 0;
+}
