feat: Download e visualização completas

--- a/src/pages/Mural/mural.module.css
+++ b/src/pages/Mural/mural.module.css
@@ -1,24 +1,17 @@
 .pageWrapper {
     display: flex;
     width: 100%;
-    background-color: #B4D2E7; /* cor de fundo azul claro */
+    background-color: #B4D2E7;
 }
 
 .body {
     flex: 1;
-    margin: 2rem;
+    margin-top: 2.5em;
+    margin-left: 1rem;
+    margin-right: 2.4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 3vh;
-}
-
-button {
-    background-color: #FF6E58; /* botões com cor laranja avermelhada */
-    color: white;
-    padding: 10px;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
 }
