--- a/src/components/MuralHeader/muralHeader.module.css
+++ b/src/components/MuralHeader/muralHeader.module.css
@@ -3,7 +3,7 @@
     color: black;
     padding-left: 1vw;  
     width: 100%;
-    height: 7%;
+    height: 7vh;
     display: flex;
     align-items: center;
 }
