--- a/src/pages/Subhome/subhome.module.css
+++ b/src/pages/Subhome/subhome.module.css
@@ -8,7 +8,7 @@
     width: 100%;
     flex-direction: column;
     text-align: center;
-    gap: 3vh;
+    gap: 3vw;
 }
 
 .info {
@@ -34,4 +34,53 @@
     font-size: 2vw;
     font-weight: 700;
     color: black;
+}
+
+@media (max-width: 600px) {
+    .info {
+        margin-top: 20vw;
+    }
+
+    .btnsWrapper {
+        margin-top: 5vw;
+        gap: 2vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .subhomeBtn {
+        width: 20vw !important;
+        height: 6vw !important;
+        font-size: 4vw !important;
+    }
+    
+    .infoText {
+        font-size: 3vw;
+        font-weight: 700;
+        color: black;
+    }
+}
+
+@media (max-width: 300px) {
+    .info {
+        margin-top: 40vw;
+    }
+
+    .btnsWrapper {
+        margin-top: 10vw;
+        gap: 4vw;
+    }
+    
+    .subhomeBtn {
+        width: 30vw !important;
+        height: 8vw !important;
+        font-size: 6vw !important;
+    }
+    
+    .infoText {
+        font-size: 4vw;
+        font-weight: 700;
+        color: black;
+    }
 }
