--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -27,6 +27,38 @@ a {
     width: 60%;
 }
 
+.normalWrapper {
+    justify-content: space-between;
+    width: 100vw;
+    margin-top: -1vw;
+    border-top-left-radius: 55px;
+    border-top-right-radius: 55px;
+    background-color: white;
+    border: 3px solid black;
+    border-bottom: none;
+}
+
+.toolsBar {
+    width: inherit;
+    margin: 0 4vw;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.focusWrapperL {margin-left: -3.5vw;}
+.focusWrapperR {margin-right: -3.5vw;}
+
+.focusWrapperL, .focusWrapperR {
+    margin-bottom: -3.5vw;
+    padding: 6vw;
+    border-radius: 100px;
+    border: 3px solid black;
+    background-color: white;
+}
+.mobileLogo {
+    width: 12vw;
+}
+
 @media (max-width: 900px) {
     .sidebar {
         width: 10%;
