--- a/src/pages/InteractiveMap/interactiveMap.module.css
+++ b/src/pages/InteractiveMap/interactiveMap.module.css
@@ -19,9 +19,17 @@
 .mapContainer {
     height: 100vh;
     width: 100%;
+    display: flex;
 }
 
 .leaflet-container {
     height: 100%;
     width: 100%;
+}
+
+@media (max-width: 600px) {
+  .mapContainer {
+      flex-direction: column-reverse;
+      justify-content: space-between;
+  }
 }
