--- a/src/pages/Subhome/subhome.module.css
+++ b/src/pages/Subhome/subhome.module.css
@@ -56,15 +56,20 @@
     }
     
     .infoText {
-        font-size: 3vw;
+        font-size: 4vw;
         font-weight: 700;
         color: black;
     }
 }
 
+@media (max-width: 400px) {
+    .info {
+        margin-top: 60vw;
+    }
+}
 @media (max-width: 300px) {
     .info {
-        margin-top: 40vw;
+        margin-top: 80vw;
     }
 
     .btnsWrapper {
