--- a/src/pages/Subhome/subhome.module.css
+++ b/src/pages/Subhome/subhome.module.css
@@ -1,28 +1,91 @@
 .pageWrapper {
     width: 100%;
     height: 100vh;
-    background-color: #2e1f27;
+    background-color: var(--c-lightBlue);
 }
 
 .body {
-    width: 90%;
-    display: flex;
+    width: 100%;
     flex-direction: column;
     text-align: center;
-    align-items: center;
+    gap: 3vw;
+}
+
+.info {
+    margin-top: 10vw;
+}
+
+.btnsWrapper {
+    margin-top: 3vw;
+    gap: 4vw;
     justify-content: center;
-    margin: 2vw;
-    gap: 3vh;
+}
+
+.subhomeBtn {
+    background-color: var(--c-orange) !important;
+    color: white !important;
+    width: 10vw !important;
+    height: 3vw !important;
+    font-size: 2vw !important;
+    border-radius: 15px !important;
 }
 
 .infoText {
     font-size: 2vw;
-    color: white;
+    font-weight: 700;
+    color: black;
 }
 
-.signature {
-    display: flex;
-    color: white;
-    margin-left: 50vw;
-    font-size: 1.5vw;
+@media (max-width: 600px) {
+    .info {
+        margin-top: 20vw;
+    }
+
+    .btnsWrapper {
+        margin-top: 5vw;
+        gap: 2vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .subhomeBtn {
+        width: 20vw !important;
+        height: 6vw !important;
+        font-size: 4vw !important;
+    }
+    
+    .infoText {
+        font-size: 4vw;
+        font-weight: 700;
+        color: black;
+    }
+}
+
+@media (max-width: 400px) {
+    .info {
+        margin-top: 60vw;
+    }
+}
+@media (max-width: 300px) {
+    .info {
+        margin-top: 80vw;
+    }
+
+    .btnsWrapper {
+        margin-top: 10vw;
+        gap: 4vw;
+    }
+    
+    .subhomeBtn {
+        width: 30vw !important;
+        height: 8vw !important;
+        font-size: 6vw !important;
+    }
+    
+    .infoText {
+        font-size: 4vw;
+        font-weight: 700;
+        color: black;
+    }
 }
