Sidebar - Implementa ToolBar para Dispositivos Moveis e outras melhorias (#28)
* Main - Deploy Front (#17)

* Initialize project using Create React App

* chore: Estrutura Inicial

* fix: Conserta Estrutura do Projeto

* feat: Implementa GitHub Actions

* chore: Implement Chakra UI and Routes Configuration

* fix: Erros do ESlint

* feat: Integração front-back

* feat: Form de registro

* fix: envio do form e estilo

* fix: encapsulation of styles

* chore: Implementa fontes, cores e logo

* feat: Implementa o componente Header

* feat: radio classes

* chore: Adiciona Imagens e Tema do Chakra UI

* feat: Implement Estrutura da Página Inicial

* refactor: Implementar Chakra UI no Login

* feat: Implementar estilos do figma & Componente Radio

* feat: Implementar componente customRadio customizável e responsividade no Registro

* fix: Remover importações não usadas e Adicionar PropTypes

* fix: Erro de build

* fix: Componente de Radio - Totalmente dependente de props agora

* fix: Erro de buid v2

* feat: Refatoração do Login

* feat: Add Default Modal

* feat: Implement Simple body

* feat: Implement Test Page and route to test

* chore: Adiciona pacote PropTypes

* fix: ESlint reclamando de props não validadas

* Consertar viewport (#6)

* feat: Organizar Pages de Login e Registro

* feat: Implementar Toast no Login

* fix: Consertar Viewport dos forms

* refactor: Refatoração const arrow function, cores, index

* feat: Criar primeiro Footer

* fix: Consertar Viewport v2

* build: Adicionar /dist para gitignore (#7)

* Modal Update e Insert de Matérias (#5)

* feat: Modal create & update Matéria v1

* feat: Update Modal com Select

* fix: Deleção de página teste

* fix: Deletar importações não usadas

* Modal Tipos de locais (#10)

* feat: Criar Modal de Tipo de locais

* build: Adicionar pacote de ícones do chakra UI

* fix: Mudar mensagens de placeholder e tooltip

* moda

--- a/src/pages/Mural/mural.module.css
+++ b/src/pages/Mural/mural.module.css
@@ -42,3 +42,10 @@
 .fileAttached {
     border: 1px solid #38A169; /* Verde sutil para indicar arquivo anexado */
 }
+
+@media (max-width: 600px) {
+    .pageWrapper {
+        flex-direction: column-reverse;
+        justify-content: space-between;
+    }
+}
