--- a/src/components/InternalMap/InternalMap.module.css
+++ b/src/components/InternalMap/InternalMap.module.css
@@ -15,6 +15,7 @@
     padding: 10px;
     width: 100vw;
     z-index: 1000;
+    transition: 0.3s ease; /* Adiciona uma transição suave */
 }
 
 .selectWrapper {
@@ -45,5 +46,65 @@
 
 .calculateButton:hover {
     cursor: pointer;
-    background-color: #ff5d44;
+    background-color: #ca5c4b;
+}
+
+/* MapStyles.module.css */
+
+/* Configuração do overlay */
+.overlay {
+    position: absolute;
+    background: var(--c-blue);
+    padding: 10px;
+    z-index: 1000;
+    transition: all 0.3s ease;
+    overflow: hidden;
+}
+
+.overlay.minimized {
+    height: 40px;
+    padding: 5px;
+}
+
+.selectWrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.toggleButton {
+    position: absolute;
+    bottom: 150px; 
+    right: 0px;
+    background-color: var(--c-orange);
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.toggleButton:hover{
+    background-color: #ca5c4b;
+}
+
+.overlay > .toggleButton {
+    margin-top: -40px;
+}
+
+/* Estilos para o botão fixo quando o overlay estiver minimizado */
+.toggleButtonMinimized {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: var(--c-orange);
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.toggleButtonMinimized:hover {
+    background-color: #ca5c4b;
 }
