--- a/src/components/InternalMap/InternalMap.module.css
+++ b/src/components/InternalMap/InternalMap.module.css
@@ -42,6 +42,7 @@
     margin: 0 auto;
     padding: 8px 20px;
     transition: 300ms;
+    font-weight: 600;
 }
 
 .calculateButton:hover {
@@ -92,6 +93,7 @@
     padding: 8px 16px;
     cursor: pointer;
     transition: 300ms;
+    z-index: 1000;
 }
 
 .toggleButtonMinimized:hover {
