--- a/src/components/LoginForm/loginForm.module.css
+++ b/src/components/LoginForm/loginForm.module.css
@@ -76,24 +76,61 @@
 
 .formLink {
     color: var(--c-lightBlue);
+    font-weight: 700;
 }
 
 @media (max-width: 480px) {
-
     .body {
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100%;
-        margin: 0;
+        margin-top: 0 !important;
         background-color: #f0f0f0;
+        padding-top: 1.5em;
+    }
+    .title {
+        color: var(--c-yellow);
+        font-weight: bold;
+        font-size: 50px !important; 
+        text-align: center;
+        margin: 0;
+        margin-bottom: 0.5em;
     }
     .form {
-        background: linear-gradient(0deg, #B4D2E7 0%, #2274A5 100%);
-        background: #2e1f2733;
-
+        max-width: 700px;
+        width: 100%;
+        padding: 20px;
+        padding-top: 0;
+        margin-top: 0;
+        border-radius: none !important;
+        background: none;
+        box-shadow: none;
     }
     .label {
-        color:#0c0c0c;
+        display: block;
+        font-size: 16px;
+        margin-bottom: 10px;
+        color: #000000;
+        font-weight: 650 !important;
+    }
+    .button {
+        background-color: var(--c-yellow) !important;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        font-size: 16px;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 100%; 
+        box-sizing: border-box;
+        margin-top: 2.5em;   
+    }
+    .button:hover {
+        background-color: #c2a347 !important;
+    }
+    .formLink {
+        color: #000;
+        font-weight: 500;
     }
 }
