--- a/src/components/InternalMap/InternalMap.module.css
+++ b/src/components/InternalMap/InternalMap.module.css
@@ -61,6 +61,15 @@
     margin-bottom: 10px;
 }
 
+.custom-button {
+    cursor: pointer;
+    font-size: 14px;
+    text-align: center;
+    border: none;
+    border-radius: 4px;
+    padding: 5px;
+  }
+  
 .toggleButton {
     position: absolute;
     bottom: 150px; 
