--- a/src/components/ChatComponent/chatComponent.module.css
+++ b/src/components/ChatComponent/chatComponent.module.css
@@ -1,35 +1,45 @@
-.container {
-    width: 100%;
-}
-
 .fileBox {
     padding: 1rem;
-    margin-bottom: 0.5rem;
-    background-color: #FF6E58;
+    margin-bottom: 1.5em;
+    padding-bottom: 2em;
+    background-color: var(--c-blue);
     border-radius: 0.375rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    position: relative;
 }
 
 .fileName {
     font-weight: bold;
     text-align: left;
-    margin-bottom: 0.5rem; 
     color: white;
-}
-
-.previewBox {
+    margin-bottom: 0.5rem;
     width: 100%;
-    height: 150px;
-    background-color: #ffffff;
-    border-radius: 0.375rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0.5rem; 
 }
 
-.link {
-    color: white !important;
+.buttonContainer {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.button {
+    background-color: #ffffff;
+    color: #FF6E58;
+    font-weight: bold;
+    border-radius: 0.375rem;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.dateText {
+    color: white;
+    font-size: 0.875rem;
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    margin: 0;
 }
